--- a/FinancialsScraper/FinancialsScraper/FinancialsScraper.csproj
+++ b/FinancialsScraper/FinancialsScraper/FinancialsScraper.csproj
@@ -7,5 +7,6 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="1.1.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.0.0" />
+    <PackageReference Include="AngleSharp" Version="0.14.0" />
   </ItemGroup>
 </Project>
