WIP - generic interfaces for mappers & builders. Still building logic into function

--- a/FinancialsScraper/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/FinancialsScraper/ConsoleApplication1/ConsoleApplication1.csproj
@@ -50,9 +50,11 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="DataElement.cs" />
+        <Compile Include="ElementName.cs" />
+        <Compile Include="IDataElement.cs" />
         <Compile Include="IElementMapper.cs" />
         <Compile Include="MapperFactory.cs" />
+        <Compile Include="MapperType.cs" />
         <Compile Include="PerShareData.cs" />
         <Compile Include="PerShareDataMapper.cs" />
         <Compile Include="Program.cs" />
