Working on mapping rest of page - cashflow, income statement, balance sheet

--- a/FinancialsScraper/FinancialsScraper/FinancialsScraper.csproj
+++ b/FinancialsScraper/FinancialsScraper/FinancialsScraper.csproj
@@ -8,12 +8,10 @@
     <PackageReference Include="Amazon.Lambda.Core" Version="1.1.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.0.0" />
     <PackageReference Include="AngleSharp" Version="0.14.0" />
+    <PackageReference Include="CompareNETObjects" Version="4.73.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="NUnit" Version="3.13.1" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Tests\Stubs" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="aws-lambda-tools-defaults.json" />
